# tergite-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Dockerfile  README.md  actual.csv  backend_config.example.toml  bcc.service  calib_device_config.example.toml  calibration.seed.example.toml  dot-env-template.txt  expected.csv  pyproject.toml  quantify-metadata.example.yml  settings.py  start_bcc.sh
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  dependencies.py
app/libs/device_parameters/: __init__.py  dtos.py  mss_client.py
app/libs/qiskit/qobj/: __init__.py  common.py  pulse_qobj.py  utils.py
app/libs/qiskit_providers/utils/: json_encoder.py
app/libs/quantum_executor/base/: executor.py  experiment.py
app/libs/quantum_executor/base/quantum_job/: __init__.py  dtos.py
app/libs/quantum_executor/qiskit/: executor.py  experiment.py  instruction.py
app/libs/quantum_executor/qiskit/backends/: one_qubit.py
app/libs/quantum_executor/quantify/: executor.py  experiment.py  instruction.py  spi_dac.py
app/libs/quantum_executor/quantify/utils/: calibration.py  config.py  portclock.py
app/libs/quantum_executor/utils/: compat.py  config.py  logger.py
app/libs/queues/: __init__.py  dtos.py  types.py  utils.py
app/services/booking/: __init__.py  models.py  service.py  store.py  utils.py
app/services/jobs/: dtos.py
app/services/jobs/workers/execution/: worker.py
app/services/jobs/workers/postprocessing/: worker.py
app/services/scheduler/: __init__.py  dtos.py  queues.py  service.py  store.py  tasks.py  utils.py
app/tests/: conftest.py  test_api.py  test_scheduler.py  test_settings.py  test_store.py
app/tests/fixtures/: backend_config.simq2.toml  backend_config.toml  compiled_schedule_expected.csv  dummy_quantify.seed.toml  dummy_spi_config.calib.toml  dynamic_properties.json  dynamic_properties.simq1.json  dynamic_properties.simq2.json  expected_recalibration.seed.toml  invalid_bookings.json  job_list.json  jobs.json  jobs_to_upload.json  jobs_to_upload_simulator_1q.json  jobs_to_upload_simulator_2q.json  pagination.json  qiskit_pulse_2q.seed.toml  recalibration-mocks.json  spi_dummy_quantify-metadata.yml  spi_hardware_quantify-metadata.yml  two-qubit_cz_qobj.json  two-qubit_quantify-config.json
app/tests/services/: test_quantify_phase_shift_direction.py  test_quantum_executor.py  test_quantum_job.py  test_spi_dac.py  test_spi_dac_verbose.py  test_wacqt_cz_gate_schedule.py  test_xarray_to_list.py
app/tests/utils/: api.py  datetime.py  env.py  executors.py  fixtures.py  funcs.py  mocks.py  mss.py  rq.py  tuner.py
app/tests/utils/executors/: __init__.py  qiskit.py  quantify.py
app/utils/: __init__.py  api.py  compat.py  crypto.py  datetime.py  exc.py  funcs.py  logging.py  logging_worker.py  model.py  redis.py  redis_store.py  rq.py  sql_db.py  strings.py
app/utils/queues/: dtos.py  types.py
docs/: auth.md  booking_and_queuing.md
