# This code is part of Tergite
#
# (C) Copyright Miroslav Dobsicek 2020, 2021
# (C) Copyright David Wahlstedt 2023
# (C) Copyright Martin Ahindura 2024
# (C) Copyright Chalmers Next Labs 2025
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.

[build-system]
requires = ["setuptools>=69", "wheel","setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tergite-backend"
authors = [
    {name = "Miroslav Dobsicek"},
    {name = "Axel Andersson"},
    {name = "Adilet Tuleouv"},
    {name = "Martin Ahindura"},
    {name = "Stefan Hill"},
    {name = "David Wahlstedt"},
    {name = "Abdullah-Al Amin"},
    {name = "Pontus Vikstål"},
    {name = "Nicklas Botö"},
    {name = "Fabian Forslund"},
]
maintainers = [
    {name = "Chalmers Next Labs AB", email = "contact@quantum.chalmersnextlabs.se"}
]
version = "2026.03.1"
description = "the Backend of the Tergite software stack of the WACQT Quantum Computer."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["quantum", "qiskit", "quantify"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rq~=2.4.0",
    "sqlmodel~=0.0.24",
    "hiredis~=3.2.1",
    # bycrypt 5.0.0 seems to have a bug ValueError('password cannot be longer than 72 bytes, truncate manually if necessary (e.g. my_password[:72])')
    # https://stackoverflow.com/questions/79776559/passlib-bcrypt-not-working-when-deployed-to-render-valueerror-password-cannot
    "bcrypt<5.0.0,>=4.3.0",
    # Fixing networkx to the last usable one; can be changed when code is updated
    "networkx~=3.4.2",
    "pyjwt~=2.9.0",
    "pyyaml~=6.0.2",
    "fastapi[standard]~=0.116.1",
    "h5py>=3.12.1",
    "toml>=0.10.2",
    "qiskit~=0.45.0",
    "qiskit-ibm-provider>=0.9.0",
    "quantify-core>=0.8.1",
    "quantify-scheduler~=0.22.2",
    "qblox-instruments~=0.14.2",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.1",
    "ruamel.yaml~=0.18.10",
    "jax>=0.5.1",
    "qiskit-dynamics>=0.5.1,<0.6.0",
    "cryptography~=45.0.2",
    # deps of deps
    # ------------
    # Just adding these libraries and versions to avoid resolution-too-deep errors
    # but the libraries themselves are dependencies of dependencies.
    "numpy>=1.26.0",
    "pydantic~=2.11.3",
    "filelock~=3.18.0",
    "matplotlib~=3.10.0",
    "contourpy~=1.3.1",
    "qcodes~=0.49.0",
    "pandas~=2.2.1",
    "annotated-types~=0.7.0",
    "anyio~=4.8.0",
    "dill~=0.3.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "httpx~=0.28.0",
    "black~=25.1.0",
    "isort~=6.0.0",
    "freezegun~=1.5.1",
    "pytest-freezegun>=0.4.2",
    "pytest-lazy-fixtures>=1.1.2",
    "pytest-asyncio~=1.1.0",
    "pre-commit~=4.2.0",
    "rq-dashboard~=0.8.3.2",
    "requests-mock>=1.11.0",
    "pytest-mock~=3.14.1",
    "pytest-xdist~=3.8.0",
    "psutil~=7.0.0",
    # deps of deps
    # -----------
    # Adding these here to constrain their versions to
    # avoid resolution-too-deep errors
    "click~=8.1.8",
    "setuptools~=80.9.0"
]

[project.urls]
Homepage = "https://github.com/tergite/tergite-backend"
Repository = "https://github.com/tergite/tergite-backend"
Documentation = "https://github.com/tergite/tergite-backend/tree/main/docs"
Issues = "https://github.com/tergite/tergite-backend/issues"
Changelog = "https://github.com/tergite/tergite-backend/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]                    
exclude = ["tests*", "build*", "dist*", "*.egg-info", ".venv*", "venv*"]

[tool.setuptools_scm]
# optional tweaks:
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.isort]
skip_gitignore = true
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:This package has reached its end of life\\.:DeprecationWarning:quantify_scheduler\\..*",
  "ignore:qiskit\\.providers\\.models is deprecated since Qiskit 1\\.2 and will be removed in Qiskit 2\\.0\\.:DeprecationWarning:app\\.libs\\.quantum_executor\\.qiskit\\.backends\\..*",
  # Qiskit Qobj / BackendV1 workflow deprecation
  "ignore:.*The `Qobj` class and related functionality are part of the deprecated `BackendV1` workflow.*:DeprecationWarning",
]